--- a/Day1 Homework.html
+++ b/Day1 Homework.html
@@ -1,37 +1,53 @@
-<html>
+<!doctype html>
+
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
-        
-</style>
+  <meta charset="utf-8">
+
+  <title>Assignment</title>
+  <meta name="description" content="HTML and CSS">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
-<div class = "DivClass">
-    <h1>"   Programming today is a race between software engineers striving to build bigger and better idiot-proof programs,
-         and the Universe trying to produce bigger and better idiots. So far, the Universe is winning." </h1>
-         
+
+<div class="flex-container">
+<button class="btn"><i class="fa fa-home"></i> Home</button>
+<button class="btn"><i class="fa fa-bars"></i> Menu</button>
+<button class="btn"><i class="fa fa-folder"></i> Learn More</button>
 </div>
-<div class="Divclass">
-<span id ="SpanId">
-    <a href="https://dzone.com/articles/quotes-every-software-engineer">A quote from Rich Cook</a>
-</span>
-</div>
-<div>
-    <p>
-    </p>
-    <p></p>
-    <h2>One of the best practices in software engineering is to build codes that is easy to read and understand, and create an application that even
-    a person that has little knowledge can operate it.</h2> <h2>As people became dependent on technology, the expectations for more user-friendly applications 
-    are high.</h2>
+<div class = "box1">
 
 </div>
+<div class = "ff">
 
+<div class ="box2">
+ 
+</div>
+<div class ="box3">
+<h1>Web Development Practices</h1>
+<br>
+<ul>
+  <li> <b>Understand the big picture</b> </li>
+  <p>You need to have planning and overview of the project to not write unnecessary codes that will keep you off track. <br>
+    One should have a good grasp on what will your project be.
+  </p>
+  <li><b> Write smarter, not more</b>  </li>
+  <p> Less means more. A programmer's code should not duplicate or overproduce codes because it can lead to bugs.<br> You should incorporate 
+    many concepts such as functions, constructors, loops, etc. to make your code neat. </p>
+  <li><b>Mobile Friendly as a Requirement</b> </li>
+  <p>Many end-users view your application/site at a mobile phone so also keep in mind that it must have the same dimensions<br> or 
+    functionality as the one that is viewed in your computer.
+  </p>
+</ul>
+</div>
+<a href=https://www.codingdojo.com/blog/web-development-best-practices> Best Practices</a>
+</div>
 
 </body>
-
-
-
-
-
-
-
+</html>
